# Curator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: config.py  main.py  pytest.ini  requirements-dev.txt  requirements.txt
app/adapters/: __init__.py  base.py  breaker.py  lidarr.py  readarr.py  slskd.py
app/core/: __init__.py  acquire.py  candidate.py  fakeflac.py  gap_detector.py  gate.py  manifest.py  matching.py  quality.py  reconcile.py  release_parse.py  scheduler.py  selector.py  shares.py  staging.py  status_page.py
app/pytest-of-Oreo/: pytest-current
app/state/: __init__.py  db.py  migration_0002.sql  migration_0003.sql  migration_0004.sql  repo.py  schema.sql
app/tests/: conftest.py  fakes.py  test_acquire.py  test_adapter_protocol.py  test_backoff.py  test_candidate_folder.py  test_concurrency.py  test_detect_batch.py  test_detect_endpoint.py  test_eligibility.py  test_fakeflac.py  test_gap_detector.py  test_gate.py  test_health.py  test_infra_classify.py  test_lidarr_adapter.py  test_matching.py  test_migration_0003.py  test_migration_0004.py  test_quality.py  test_readarr_adapter.py  test_reconcile.py  test_release_parse.py  test_scheduler.py  test_selector.py  test_shares.py  test_slskd_client.py  test_staging.py  test_state_repo.py  test_status_page.py
scripts/: smoke-test.sh
(+335 files in other folders)
